Prediction done for Goalkeepers

--- a/us/player model/Untitled copy.ipynb
+++ b/us/player model/Untitled copy.ipynb
@@ -2,10 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "001c5cb7-495d-4c6c-aadb-4b8d4c0aa9fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        93\n",
+      "1        92\n",
+      "2        91\n",
+      "3        91\n",
+      "4        91\n",
+      "         ..\n",
+      "19234    47\n",
+      "19235    47\n",
+      "19236    47\n",
+      "19237    47\n",
+      "19238    47\n",
+      "Name: overall, Length: 19239, dtype: int64\n",
+      "0        93\n",
+      "1        92\n",
+      "2        91\n",
+      "3        91\n",
+      "4        91\n",
+      "         ..\n",
+      "19234    52\n",
+      "19235    59\n",
+      "19236    55\n",
+      "19237    60\n",
+      "19238    60\n",
+      "Name: potential, Length: 19239, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -16,15 +47,17 @@
     "df = pd.read_csv('filtered.csv')\n",
     "\n",
     "# Define features (X) and target variables (y)\n",
-    "X = df[['age', 'pace', 'shooting', 'passing', 'dribbling', 'defending', 'physic']]\n",
+    "X = df[['age', 'goalkeeping_diving', 'goalkeeping_handling', 'goalkeeping_kicking', 'goalkeeping_positioning', 'goalkeeping_reflexes', 'goalkeeping_speed']]\n",
     "y_ability = df['overall']\n",
     "y_potential = df['potential']\n",
+    "print(y_ability)\n",
+    "print(y_potential)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "a68a3736-8d5f-4d5f-9013-6ef9f6d4c444",
    "metadata": {},
    "outputs": [
@@ -32,19 +65,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ability RMSE: 3.921173949030874\n",
-      "Potential RMSE: 4.401945826729547\n",
-      "Ability MAE: 2.9736911535911617\n",
-      "Potential MAE: 3.4256532001506104\n"
+      "Ability RMSE: 6.142421458981293\n",
+      "Potential RMSE: 5.861028192216167\n",
+      "Ability MAE: 4.778115911912272\n",
+      "Potential MAE: 4.603054088195921\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['potential_model1.joblib']"
+       "['gkability_model1.joblib']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +124,7 @@
     "print(\"Ability MAE:\", ability_mae)\n",
     "print(\"Potential MAE:\", potential_mae)\n",
     "from joblib import dump \n",
-    "dump(potential_model,'potential_model1.joblib')\n"
+    "dump(ability_model,'gkability_model1.joblib')\n"
    ]
   }
  ],
