Edits for report

--- a/us/player model/Untitled.ipynb
+++ b/us/player model/Untitled.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "001c5cb7-495d-4c6c-aadb-4b8d4c0aa9fa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ability RMSE: 3.995930394925393\n",
+      "Potential RMSE: 4.435715431751471\n",
+      "Ability MAE: 3.017929551136632\n",
+      "Potential MAE: 3.476475988102156\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
